--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ uvicorn = "*"
 jinja2 = "*"
 aiofiles = "*"
 python-multipart = "*"
+mistune = "*"
+orm = "*"
+aiosqlite = "*"
 
 [requires]
 python_version = "3.6"
