Use uvicorn executable to run and update uvicorn to [standard] for websocket support.

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ jedi = "*"
 
 [packages]
 starlette = "*"
-uvicorn = "*"
+"uvicorn[standard]" = "*"
 jinja2 = "*"
 aiofiles = "*"
 python-multipart = "*"
